--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -6,6 +6,6 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://go:3000;
     }
 }
