--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -1,8 +1,8 @@
 server {
-    listen 443 ssl http2;
+    listen 80;
 
-    ssl_certificate /etc/nginx/certificates/tls-cert.pem;
-    ssl_certificate_key /etc/nginx/certificates/tls-key.pem;
+#   ssl_certificate /etc/nginx/certificates/tls-cert.pem;
+#   ssl_certificate_key /etc/nginx/certificates/tls-key.pem;
 
     location / {
         proxy_set_header Host $http_host;
