--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -1,3 +1,9 @@
+upstream backend {
+    server 192.168.0.11:3000 weight=1;
+    server 192.168.0.12:3000 weight=1;
+    server 192.168.0.13:3000 weight=1;
+}
+
 server {
     listen 443 ssl http2;
 
@@ -6,6 +12,6 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://backend;
     }
 }
