--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -10,8 +10,20 @@ server {
     ssl_certificate /etc/nginx/certificates/tls-cert.pem;
     ssl_certificate_key /etc/nginx/certificates/tls-key.pem;
 
+    root /var/www/html;
+
+    location /dav/ {
+        client_body_temp_path /var/www/temp;
+        dav_methods PUT DELETE MKCOL COPY MOVE;
+        create_full_put_path on;
+        dav_access user:rw group:rw all:rw;
+        autoindex off;
+        allow all;
+    }
+
     location / {
         proxy_set_header Host $http_host;
-        proxy_pass http://backend;
+#        proxy_pass http://backend;
+        proxy_pass http://192.168.0.11:3000;
     }
 }
