--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -18,7 +18,21 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    log_format  ltsv  "local_time:$time_local"
+    "\thost:$remote_addr"
+    "\tforwardedfor:$http_x_forwarded_for"
+    "\treq:$request"
+    "\tstatus:$status"
+    "\tsize:$body_bytes_sent"
+    "\treferer:$http_referer"
+    "\tua:$http_user_agent"
+    "\treqtime:$request_time"
+    "\tcache:$upstream_http_x_cache"
+    "\truntime:$upstream_http_x_runtime"
+    "\tvhost:$host"
+    "\tmethod:$request_method"
+    "\turi:$request_uri";
+    access_log  /var/log/nginx/access.log  ltsv;
 
     sendfile        on;
     #tcp_nopush     on;
