--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -12,6 +12,8 @@ server {
 
     root /var/www/html;
 
+    client_max_body_size 100m;
+
     location /dav/ {
         client_body_temp_path /var/www/temp;
         dav_methods PUT DELETE MKCOL COPY MOVE;
