--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -1,6 +1,6 @@
 upstream backend {
-    server 192.168.0.11:3000 weight=1;
-    server 192.168.0.12:3000 weight=1;
+    server 192.168.0.11:3000 weight=3;
+    server 192.168.0.12:3000 weight=3;
     server 192.168.0.13:3000 weight=1;
 }
 
@@ -25,7 +25,7 @@ server {
 
     location / {
         proxy_set_header Host $http_host;
-#        proxy_pass http://backend;
-        proxy_pass http://192.168.0.11:3000;
+        proxy_pass http://backend;
+#        proxy_pass http://192.168.0.11:3000;
     }
 }
