--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -1,7 +1,7 @@
 upstream backend {
-    server 192.168.0.11:3000 weight=3;
-    server 192.168.0.12:3000 weight=3;
-    server 192.168.0.13:3000 weight=1;
+    server 192.168.0.11:3000 weight=1;
+    server 192.168.0.12:3000 weight=1;
+#    server 192.168.0.13:3000 weight=1;
 }
 
 server {
