--- a/etc/nginx/sites-available/isucondition.conf
+++ b/etc/nginx/sites-available/isucondition.conf
@@ -14,6 +14,8 @@ server {
 
     client_max_body_size 100m;
 
+    gzip on;
+
     location /dav/ {
         client_body_temp_path /var/www/temp;
         dav_methods PUT DELETE MKCOL COPY MOVE;
